# smart-factory-integration

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.trust-lsp/index-cache/: index.json
app/: main.py
app/domain/: event_record.py  events.py  orchestrator_result.py  production.py  runtime.py  states.py  transitions.py
app/services/: orchestrator.py  production.py
app/tests/domain/: production_test.py  transition_test.py
app/tests/services/: production_test.py
app/utils/: boot.py  logger.py  utils.py
codesys/: dispatch_controller.py  helpers.py  opc.py  plc_conveyor.py  signal.py  signal_monitor.py  tui.py
codesys/plc/gvl/: gvl_io.st  gvl_state.st
codesys/plc/prg/: conveyor.st  main.st
docs/: system.md
openplc/: plc.xml  project.json
openplc/devices/: configuration.json
openplc/devices/servers/: modbus.json
openplc/pous/programs/: blink.ld  main.ld  scara_cell.ld
openplc/scara_cell/: project.json
openplc/scara_cell/pous/function-blocks/: FSM.st
openplc/scara_cell/pous/programs/: main.ld
scripts/: modbus.py
siemens/: modbus.py  opcua_nodes.py  port.py
